--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "firebase": "^10.8.0",
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
