--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "moongose": "^1.0.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "react-circular-progressbar": "^2.1.0"
   }
 }
